--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/material": "^5.14.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
