--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,10 @@ jobs:
       uses: actions/setup-node@v3.8.1
       with:
         node-version: 18
+        cache: yarn
+        cache-dependency-path: ./yarn.lock
+    - name: Install
+      run: yarn install
     - name: lint
       run: yarn lint
     - name: build
